--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+	<header>
+		<h1>Turismo em Praia Grande</h1>
+	</header>
+
+	<img id= "banner" src="banner.jpg">
+	<p><strong>A Viação Boa Viagem</strong> empresa especializada em serviços de transportes turísticos na cidade de Praia Grande - SP. Fundada em 2023 e com sede no bairro das Praias – SP, nosso objetivo é oferecer transporte com diversos veículos e para várias ocasiões. Há mais de uma semana no mercado, a Viaçao Boa Viagem carrega uma bagagem de muita experiência em transportar passageiros para os eventos mais importantes de suas vidas e também auxiliar nossos clientes em seus trajetos do dia a dia.</p>
+
+	<p>A Viação Boa Viagem <em><strong> oferece transportes nos mais modernos veículos, entre carros executivos, vans, micro-ônibus e ônibus.</strong></em></p>
+
+	<p>Agora que você já conhece um pouco da nossa história e sobre os nossos serviços, é só entrar em contato conosco. Solicite um orçamento e veja qual o melhor tipo de transporte para o seu evento. Estamos esperando por vocês!</p>
 
 </body>
 <footer>
