centralizando titulo principal

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
 	<meta charset="UTF-8">
 	<title>Viação Boa Viagem</title>
@@ -9,7 +8,7 @@
 
 <body>
 	<header>
-		<h1>Turismo em Praia Grande</h1>
+		<h1 class="titulo-principal">Turismo em Praia Grande</h1>
 	</header>
 
 	<img id= "banner" src="banner.jpg">
@@ -21,7 +20,3 @@
 
 </body>
 <footer>
-	
-</footer>
-
-</html>
