--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Viação Boa Viagem</title>
+		
 		<link rel="stylesheet" href="style-home.css">
 	</head>
 
 	<body>
 		<header>
 			<h1 class="titulo-principal">Turismo em Praia Grande</h1>
+			<nav>
+				<ul>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+			</nav>
+
 		</header>
 
 		<img id= "banner" src="banner.jpg">
@@ -40,8 +47,5 @@
 
 	</body>
 
-		<footer>
-			<img id="logo" src="logopng.png">
-			<p class="copyrigth"> &copy; Copyrigth Viação Boa Viagem - 2023
-		</footer>
+		
 </html>
